--- a/body-matter/1r/fonaments-de-les-matematiques.tex
+++ b/body-matter/1r/fonaments-de-les-matematiques.tex
@@ -1833,7 +1833,7 @@
     \end{proof}
     \begin{theorem}[Teorema Fonamental de l'Aritmètica]
         %https://proofwiki.org/wiki/Fundamental_Theorem_of_Arithmetic
-        \label{Teorema Fonomental de l'Aritmètica}\label{thm:Teorema Fonamental de l'Aritmètica}
+        \labelname{Teorema Fonomental de l'Aritmètica}\label{thm:Teorema Fonamental de l'Aritmètica}
         Sigui~\(a>1\) un enter.
         Aleshores existeixen~\(p_{1},\dots,p_{n}\) primers amb~\(p_{1}\geq p_{2}\geq\dots\geq p_{n}\) únics tals que~\(a=p_{1}\cdots p_{n}\).
     \end{theorem}
