--- a/body-matter/2n/analisi-matematica.tex
+++ b/body-matter/2n/analisi-matematica.tex
@@ -1403,7 +1403,7 @@
         \]
     \end{proof}
     \begin{theorem}[Teorema de Cauchy]
-        \label{Teorema de Cauchy}\label{thm:Teorema de Cauchy}
+        \labelname{Teorema de Cauchy}\label{thm:Teorema de Cauchy}
         Siguin~\(\sum_{n=0}^{\infty}a_{n}\) i~\(\sum_{n=0}^{\infty}b_{n}\) dues sèries absolutament convergents i~\((c_{n})_{n\in\mathbb{N}}\) una successió tal que per a tot~\((i,j)\) de~\(\mathbb{N}\times\mathbb{N}\) existeix un únic~\(n\) tal que~\(c_{n}=a_{i}b_{j}\) i tal que per a tot~\(n\) de~\(\mathbb{N}\) existeix un únic~\((i,j)\) de~\(\mathbb{N}\times\mathbb{N}\) tal que~\(c_{n}=a_{i}b_{j}\).
         Aleshores tenim que
         \[
