--- a/body-matter/3r/equacions-diferencials-I.tex
+++ b/body-matter/3r/equacions-diferencials-I.tex
@@ -810,7 +810,9 @@
         Aleshores per la definició de \myref{def:prolongació} tenim que per a tot~\(t\) de~\(I_{n}\) tenim que~\(u_{n}(t)=u_{m}(t)\), i per tant~\(u\) està ben definida.
         El cas~\((I_{m},u_{m})\leq(I_{n},u_{n})\) és anàleg.
 
-        Ara bé, tenim que~\((I_{i},u_{i})\leq(I,u)\) per a tot~\(i\) de~\(J\), i per la definició de \myref{def:cota superior d'una cadena} tenim que~\((I_{i},u_{i})\leq(I,u)\) és un element maximal de la cadena~\((I_{i},u_{i})_{i\in J}\), i pel \myref{lema de Zorn} tenim que existeix un element maximal de la cadena, i per la definició de \myref{def:solució improrrogable} hem acabat.
+        Ara bé, tenim que~\((I_{i},u_{i})\leq(I,u)\) per a tot~\(i\) de~\(J\), i
+        per la definició de \myref{def:cota superior d'una cadena} tenim
+        que~\((I_{i},u_{i})\leq(I,u)\) és un element maximal de la cadena~\((I_{i},u_{i})_{i\in J}\), i pel \myref{lema:lema de Zorn} tenim que existeix un element maximal de la cadena, i per la definició de \myref{def:solució improrrogable} hem acabat.
     \end{proof}
     \begin{proposition}
         \label{prop:les solucions improrrogables estàn definides sobre intervals oberts}
