--- a/body-matter/3r/geometria-diferencial.tex
+++ b/body-matter/3r/geometria-diferencial.tex
@@ -576,7 +576,7 @@
         \]
     \end{proof}
     \begin{definition}[Orientació d'una base]
-        \labelname{orientació d'una base}\label{orientació d'una base}
+        \labelname{orientació d'una base}\label{def:orientació d'una base}
         \labelname{base positiva}\label{def:base positiva}
         Sigui~\((\vec{u},\vec{v},\vec{w})\) una base tal que~\(\det(\vec{u},\vec{v},\vec{w})>0\).
         Aleshores direm que~\((\vec{u},\vec{v},\vec{w})\) és una base positiva.
