--- a/body-matter/3r/probabilitat.tex
+++ b/body-matter/3r/probabilitat.tex
@@ -609,7 +609,7 @@
         %TODO
     \end{example}
     \begin{notation}
-        \label{not:variables aleatòries}
+        \label{notation:variables aleatòries}
         Sigui~\(X\colon\Omega\longrightarrow\RR\) una variable aleatòria sobre un~\(\sigma\)-àlgebra~\(\Algebra{A}\).
         Aleshores denotem
         \begin{enumerate}
