--- a/body-matter/3r/topologia.tex
+++ b/body-matter/3r/topologia.tex
@@ -2104,7 +2104,7 @@
     \end{proof}
     \subsection{Connexió per camins}
     \begin{definition}[Camí]
-        \labelname{camí}\label{de:camí}
+        \labelname{camí}\label{def:camí}
         \labelname{origen d'un camí}\label{def:orígen d'un camí}
         \labelname{final d'un camí}\label{def:final d'un camí}
         Siguin~\(X\) un espai topològic i~\(\omega\colon[0,1]\longrightarrow X\) una aplicació contínua.
@@ -2113,7 +2113,7 @@
         També direm que~\(\omega(0)\) és l'origen del camí i~\(\omega(1)\) el final del camí.
     \end{definition}
     \begin{definition}[Connex per camins]
-        \label{connexió per camins}\label{def:connexió per camins}
+        \labelname{connexió per camins}\label{def:connexió per camins}
         Sigui~\(X\) un espai topològic tal que per a tots dos punts~\(x\) i~\(y\) de~\(X\) existeix un camí~\(\omega\) tal que~\(x\) és l'origen de~\(\omega\) i~\(y\) és el final de~\(\omega\).
         Aleshores direm que~\(X\) és connex per camins.
     \end{definition}
