--- a/body-matter/temp-intro.tex
+++ b/body-matter/temp-intro.tex
@@ -133,7 +133,7 @@
         Si~\(q(x)\) és una norma existeixen~\(m,M\in\mathbb{R}^{+}\) tals que~\(m\left\lVert x\right\rVert\leq q(x)\leq M\left\lVert x\right\rVert\) per a tot~\(x\in\mathbb{R}^{m}\).
     \end{theorem}
     \begin{theorem}[Teorema del Valor Mig]
-        \label{Teorema del Valor Mig}\label{thm:TVM}
+        \labelname{Teorema del Valor Mig}\label{thm:TVM}
         \emph{hmm trivial}
     \end{theorem}
     \begin{theorem}[Desigualtat de Cauchy-Schwarz]
@@ -172,7 +172,7 @@
 \section{Trobar lloc per tot això}
     \begin{definition}[Conjunt obert, tancat...]
         \labelname{conjunt obert}\label{def:obert CDVO}
-        \labelname{conjunt tancat}\label{def:tancat CDVO}\label{conjunt obert, tancat...}\label{todo:conjunt definit per desigualtats estrictes és compacte}
+        \labelname{conjunt tancat}\label{def:tancat CDVO}\label{todo:conjunt definit per desigualtats estrictes és compacte}
     \end{definition}
     \begin{definition}[Continuïtat uniforme]
         \labelname{continuïtat uniforme}\label{def:uniformement contínua}
